# Lab1

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp  main_supervisor.cpp_
code/: master.cpp  master.h
sim/: RobotInterface.h
world/: lab1.wbt  lab_1.wbt
worlds/: lab1.wbt
